# LibManage

./: .git-credentials  .gitignore  CMakeLists.txt  LICENSE  README.md  admin.txt  log.h  main.cpp  makefile  new.rar  person.h  reader.txt
.history/data/: admin_20200716183729.txt  admin_20200716190348.txt  admin_20200716205011.txt  admin_20200716212523.txt
.history/include/: library_20200716003010.h  library_20200716003035.h  library_20200716004820.h  library_20200716113644.h  library_20200716170514.h  library_20200716172005.h  log_20200715184605.h  log_20200715184736.h  log_20200715231608.h  log_20200716170222.h  log_20200716171154.h  log_20200716172552.h  log_20200716172631.h  log_20200716172638.h  log_20200716172706.h  log_20200716172945.h  log_20200716203924.h  log_20200716203939.h  log_20200716204010.h  log_20200716204018.h  log_20200716204044.h  log_20200716204331.h  log_20200716205615.h  log_20200716205734.h  log_20200716205940.h  log_20200716210616.h  log_20200716210702.h  log_20200716210722.h  log_20200716211211.h  log_20200716211217.h  person_20200714220507.h  person_20200714221521.h  person_20200714224802.h  person_20200714225051.h  person_20200714225525.h  person_20200714230042.h  person_20200715184428.h  person_20200715190331.h  person_20200715192128.h  (+16 more)
data/: admin.txt  reader.txt
example/: booktest.cpp  lib_search_test.cpp  testmap.cpp  tracetest.cpp
include/: TimeSub.h  account.h  libTime.h  library.h  log.h  nowtime.h  person.h  trace.h
login/: admin.txt  main.cpp  reader.txt
src/: book.cpp  libTime.cpp  library.cpp  person.cpp  trace.cpp
(+145 files in other folders)
